--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "frontend/dist"
@@ -15,9 +15,10 @@
       "dest": "/frontend/dist/$1"
     }
   ],
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "npm run build:frontend",
   "outputDirectory": "frontend/dist",
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "npm run install:frontend",
+  "framework": "vite",
   "env": {
     "NODE_ENV": "production"
   }
