--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist"
+        "distDir": "dist"
       }
     }
   ],
@@ -15,10 +15,9 @@
       "dest": "/frontend/dist/$1"
     }
   ],
-  "buildCommand": "npm run build:frontend",
+  "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "npm run install:frontend",
-  "framework": "vite",
+  "installCommand": "cd frontend && npm install",
   "env": {
     "NODE_ENV": "production"
   }
