Configuração para deploy do backend no Vercel

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "start:prod": "node dist/server.js",
+    "vercel-build": "tsc",
     "migrate:run": "tsx src/scripts/migrate.ts run",
     "migrate:create": "tsx src/scripts/migrate.ts create",
     "migration:run": "npm run migrate:run",
