--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,29 @@
   "version": 2,
   "builds": [
     {
+      "src": "backend/src/server.ts",
+      "use": "@vercel/node"
+    },
+    {
       "src": "frontend/dist/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/backend/src/server.ts"
+    },
+    {
+      "src": "/health",
+      "dest": "/backend/src/server.ts"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/dist/$1"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
