--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "functions": {
-    "api/index.ts": {
+    "api/index.js": {
       "runtime": "@vercel/node"
     }
   },
   "routes": [
     {
       "src": "/health",
-      "dest": "/api/index.ts"
+      "dest": "/api/index.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.ts"
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
