--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,15 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm install",
   "functions": {
-    "api/*.js": {
+    "frontend/api/*.js": {
       "runtime": "@vercel/node"
     }
   },
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/frontend/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/$1"
