--- a/vercel.json
+++ b/vercel.json
@@ -9,21 +9,29 @@
       }
     },
     {
-      "src": "frontend/api/*.js",
+      "src": "frontend/api/health.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/api/test.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/frontend/api/$1"
+      "src": "/api/health",
+      "dest": "/frontend/api/health.js"
+    },
+    {
+      "src": "/api/test",
+      "dest": "/frontend/api/test.js"
     },
     {
       "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
+      "dest": "/frontend/dist/index.html"
     }
   ],
   "env": {
