--- a/vercel.json
+++ b/vercel.json
@@ -7,16 +7,31 @@
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
     }
   ],
+  "functions": {
+    "api/health.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/test.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/index.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.js"
+      "src": "/api/health",
+      "dest": "/api/health.js"
+    },
+    {
+      "src": "/api/test", 
+      "dest": "/api/test.js"
+    },
+    {
+      "src": "/api/?",
+      "dest": "/api/index.js"
     },
     {
       "handle": "filesystem"
@@ -28,7 +43,7 @@
   ],
   "env": {
     "SUPABASE_URL": "@supabase_url",
-    "SUPABASE_ANON_KEY": "@supabase_anon_key",
+    "SUPABASE_ANON_KEY": "@supabase_anon_key", 
     "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
   }
 }
