--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,9 @@
     },
     "api/index.js": {
       "runtime": "nodejs18.x"
+    },
+    "api/users.js": {
+      "runtime": "nodejs18.x"
     }
   },
   "routes": [
@@ -28,6 +31,10 @@
     {
       "src": "/api/test",
       "dest": "/api/test.js"
+    },
+    {
+      "src": "/api/users",
+      "dest": "/api/users.js"
     },
     {
       "src": "/api",
