fix: corrigir estrutura de diretórios no vercel.json - remover referências ao diretório frontend inexistente

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "name": "decolagem-gf",
   "builds": [
     {
-      "src": "frontend/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -26,8 +26,5 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "installCommand": "cd frontend && npm install",
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/dist"
+  ]
 }
