--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  "version": 2,
-  "name": "decolagem-gf",
-  "installCommand": "npm install",
-  "buildCommand": "npm run build:frontend",
-  "outputDirectory": "frontend/dist",
   "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
     {
       "src": "api/*.js",
       "use": "@vercel/node"
@@ -14,9 +16,6 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
-    },
-    {
-      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
