chore(frontend): add preview deployment indicator on ConfiguracoesPage

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,4 +1,1 @@
-{
-  "projectId": "decolagem-gf-frontend",
-  "orgId": "decolagem"
-}
+{"projectId":"prj_SaEMT3fMNrMqSjZ1HPNpDKLf239h","orgId":"team_OYX8MxPGcGDBQbpETqhrbw02","projectName":"decolagem-gf-frontend"}
