--- a/vercel.json
+++ b/vercel.json
@@ -1,38 +1,18 @@
 {
   "version": 2,
-  "buildCommand": "npm --prefix backend run vercel-build && npm --prefix frontend run build",
+  "buildCommand": "npm --prefix backend run vercel-build",
   "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    },
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/*.js", "use": "@vercel/node", "config": { "includeFiles": ["backend/dist/**"] } }
   ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index?path=$1"
-    },
-    {
-      "src": "/health",
-      "dest": "/api/index?path=health"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/api/health", "dest": "/api?path=health" },
+    { "src": "/health", "dest": "/api?path=health" },
+    { "src": "/api/(.*)", "dest": "/api?path=$1" },
+    { "handle": "filesystem" }
   ],
   "env": {
     "NODE_ENV": "production",
-    "CORS_ORIGIN": "https://decolagem-gf-frontend.vercel.app"
+    "CORS_ORIGIN": "https://decolagem-gf-frontend.vercel.app",
+    "FRONTEND_URL": "https://decolagem-gf-frontend.vercel.app"
   }
 }
