fix(vercel): map backend/dist into api/_backend_dist and import from there; add debug checks

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,13 @@
   "functions": {
     "api/*.js": {
       "runtime": "nodejs20.x",
-      "includeFiles": ["backend/dist/**"]
+      "includeFiles": [
+        "backend/dist/**",
+        {
+          "source": "backend/dist/**",
+          "destination": "api/_backend_dist"
+        }
+      ]
     }
   },
   "routes": [
