fix(vercel+api): incluir api/_backend_dist/** no bundle; parsing robusto de ?path= na função

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
     "api/*.js": {
       "runtime": "nodejs20.x",
       "includeFiles": [
-        "backend/dist/**"
+        "backend/dist/**",
+        "api/_backend_dist/**"
       ]
     }
   },
