fix(vercel): ajustar functions.includeFiles para string de glob braces compatível com CLI

--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,7 @@
   "functions": {
     "api/*.js": {
       "runtime": "nodejs20.x",
-      "includeFiles": [
-        "backend/dist/**",
-        "api/_backend_dist/**",
-        "api/server.js"
-      ]
+      "includeFiles": "{backend/dist/**,api/_backend_dist/**,api/server.js}"
     }
   },
   "routes": [
