--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,8 @@
   "routes": [
     { "src": "/api/health", "dest": "/api?path=health" },
     { "src": "/health", "dest": "/api?path=health" },
-    { "src": "/api/(.*)", "dest": "/api?path=$1" },
-    { "handle": "filesystem" }
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/api/[...path]" }
   ],
   "env": {
     "NODE_ENV": "production",
