feat: Adiciona cards Imersão Maras e Encontro Líder Maras ao dashboard - Adiciona novos cards 'Imersão Maras' e 'Encontro Líder Maras' no dashboard - Implementa cálculos usando sumActivitiesByLabels para valores realizados - Define metas padrão de 50 para Imersão Maras e 30 para Encontro Líder Maras - Adiciona ícones Crown e Activity em cor rosa/maras - Reorganiza layout do dashboard para manter 4 cards por linha - Posiciona novos cards na terceira linha junto com outros cards das Maras - Integra com sistema de atualização em tempo real existente

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "clean": "npm run clean:backend && npm run clean:frontend",
     "clean:backend": "cd backend && npm run clean",
     "clean:frontend": "cd frontend && npm run clean",
-    "vercel-build": "npm --prefix backend install --legacy-peer-deps && npm --prefix backend run vercel-build && npm --prefix frontend install --legacy-peer-deps && npm --prefix frontend run build && rm -f index.html && rm -rf assets && cp -R frontend/dist/* . && rm -rf api/_backend_dist && mkdir -p api/_backend_dist && cp -R backend/dist/* api/_backend_dist/ && cp backend/dist/server.js api/server.js && cp backend/dist/server.js api/server.mjs"
-   },
+    "vercel-build": "npm --prefix backend install --legacy-peer-deps && npm --prefix backend run vercel-build && npm --prefix frontend install --legacy-peer-deps && npm --prefix frontend run build && if exist index.html del index.html && if exist assets rmdir /s /q assets && xcopy frontend\\dist\\* . /s /e /y && if exist api\\_backend_dist rmdir /s /q api\\_backend_dist && mkdir api\\_backend_dist && xcopy backend\\dist\\* api\\_backend_dist\\ /s /e /y && copy backend\\dist\\server.js api\\server.js && copy backend\\dist\\server.js api\\server.mjs"
+  },
   "keywords": [
     "crm",
     "erp",
@@ -82,17 +82,17 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
-    "form-data": "^4.0.4",
-    "node-fetch": "^2.7.0",
-    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.76.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^6.11.2",
+    "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "express-rate-limit": "^6.11.2",
     "multer": "^2.0.2",
-    "@supabase/supabase-js": "^2.58.0",
+    "node-fetch": "^2.7.0",
     "pg": "^8.16.3",
-    "zod": "^3.22.4",
-    "dotenv": "^16.4.5"
+    "zod": "^3.22.4"
   }
 }
