--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
+    "decolagem-system": "file:..",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "express-rate-limit": "^6.11.2",
