--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "decolagem-system": "file:..",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
