fix: corrigir outputDirectory no vercel.json para resolver erro de deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "version": 2,
   "buildCommand": "npm run vercel-build",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": ".",
+        "outputDirectory": "."
+      }
+    }
+  ],
   "routes": [
     { "src": "/api/health", "dest": "/api?path=health" },
     { "src": "/health", "dest": "/api?path=health" },
