--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,9 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": ".",
-        "outputDirectory": "."
+        "outputDirectory": ".",
+        "nodeVersion": "18.x",
+        "maxLambdaSize": "50mb"
       }
     }
   ],
