Fix: Resolver conflito de deploy na Vercel - Remover api/server.js duplicado (mantendo apenas server.mjs) - Atualizar .vercelignore para evitar futuros conflitos com server.js - Corrigir erro: 'Two or more files have conflicting paths or names'

--- a/.vercelignore
+++ b/.vercelignore
@@ -48,6 +48,9 @@ scripts/
 debug-*.js
 debug-*.html
 test-*.js
+
+# Avoid conflicts with server files
+api/server.js
 test-*.html
 check-*.js
 fix-*.js
