--- a/package.json
+++ b/package.json
@@ -4,46 +4,17 @@
   "description": "Sistema de gestão CRM Social + ERP Simplificado para programas As Maras, Microcrédito e Decolagem",
   "main": "index.js",
   "scripts": {
-    "install:all": "npm run install:backend && npm run install:frontend",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd frontend && npm install",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm run start:dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:mobile": "echo 'Mobile não configurado ainda'",
-    "build": "cd frontend && npm run build",
-    "build:backend": "cd backend && npm run build",
-    "build:frontend": "cd frontend && npm run build",
-    "build:mobile": "echo 'Mobile não configurado ainda'",
-    "start": "npm run start:backend",
-    "start:backend": "cd backend && npm run start:prod",
-    "start:frontend": "cd frontend && npm run preview",
-    "test": "npm run test:backend && npm run test:frontend",
-    "test:backend": "cd backend && npm run test",
-    "test:frontend": "cd frontend && npm run test",
-    "test:watch": "concurrently \"npm run test:backend -- --watch\" \"npm run test:frontend -- --watch\"",
-    "lint": "npm run lint:backend && npm run lint:frontend",
-    "lint:backend": "cd backend && npm run lint",
-    "lint:frontend": "cd frontend && npm run lint",
-    "lint:fix": "npm run lint:backend -- --fix && npm run lint:frontend -- --fix",
-    "format": "npm run format:backend && npm run format:frontend",
-    "format:backend": "cd backend && npm run format",
-    "format:frontend": "cd frontend && npm run format",
-    "type-check": "npm run type-check:backend && npm run type-check:frontend",
-    "type-check:backend": "cd backend && npm run type-check",
-    "type-check:frontend": "cd frontend && npm run type-check",
-    "db:migrate": "cd backend && npm run migration:run",
-    "db:seed": "cd backend && npm run seed",
-    "db:reset": "cd backend && npm run migration:revert && npm run migration:run && npm run seed",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "docker:rebuild": "docker-compose down && docker-compose build --no-cache && docker-compose up -d",
-    "setup": "npm run install:all && npm run db:migrate && npm run db:seed",
-    "clean": "npm run clean:backend && npm run clean:frontend",
-    "clean:backend": "cd backend && npm run clean",
-    "clean:frontend": "cd frontend && npm run clean",
-    "vercel-build": "npm --prefix backend install --legacy-peer-deps --production=false && npm --prefix backend run vercel-build && npm --prefix frontend install --legacy-peer-deps --production=false && npm --prefix frontend run build && node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('index.html'))fs.unlinkSync('index.html');if(fs.existsSync('assets'))fs.rmSync('assets',{recursive:true,force:true});const copyDir=(src,dest)=>{if(!fs.existsSync(dest))fs.mkdirSync(dest,{recursive:true});fs.readdirSync(src).forEach(file=>{const srcPath=path.join(src,file);const destPath=path.join(dest,file);if(fs.statSync(srcPath).isDirectory()){copyDir(srcPath,destPath)}else{fs.copyFileSync(srcPath,destPath)}})};copyDir('frontend/dist','.');if(fs.existsSync('api/_backend_dist'))fs.rmSync('api/_backend_dist',{recursive:true,force:true});fs.mkdirSync('api/_backend_dist',{recursive:true});copyDir('backend/dist','api/_backend_dist');if(fs.existsSync('backend/dist/server.js')){fs.copyFileSync('backend/dist/server.js','api/server.js');fs.copyFileSync('backend/dist/server.js','api/server.mjs')}\""
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
+    "dev:backend": "npm run dev --prefix backend",
+    "dev:frontend": "npm run dev --prefix frontend",
+    "build": "npm run build --prefix frontend && npm run build --prefix backend",
+    "build:frontend": "npm run build --prefix frontend",
+    "build:backend": "npm run build --prefix backend",
+    "vercel-build": "npm run build",
+    "start": "npm run start --prefix backend",
+    "test": "npm run test --prefix frontend && npm run test --prefix backend",
+    "lint": "npm run lint --prefix frontend && npm run lint --prefix backend",
+    "type-check": "npm run type-check --prefix frontend && npm run type-check --prefix backend"
   },
   "keywords": [
     "crm",
