--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "22.x",
     "npm": ">=9.0.0"
   },
   "dependencies": {
