--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": null,
   "functions": {
     "api/**/*.mjs": {
-      "runtime": "nodejs20.x"
+      "runtime": "vercel/node@22.x"
     }
   },
   "rewrites": [
