fix(vercel): configurar @vercel/static-build com distDir=frontend/dist e garantir inclusão de src no build

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,13 @@
       "runtime": "nodejs20.x"
     }
   },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "frontend/dist" }
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
