--- a/.vercelignore
+++ b/.vercelignore
@@ -5,6 +5,8 @@ node_modules/
 # Source files (keep only built files)
 # backend/src/  # REMOVIDO: necessário para compilar no Vercel
 # frontend/src/  # REMOVIDO: necessário para compilar no Vercel
+!backend/src/
+!frontend/src/
 
 # Development files
 *.log
