--- a/vercel.json
+++ b/vercel.json
@@ -6,16 +6,10 @@
   "framework": null,
   "functions": {
     "api/**/*.{js,mjs}": {
-      "runtime": "nodejs20.x"
+      "runtime": "vercel/node@20.x"
     }
   },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist" }
-    }
-  ],
+
   "rewrites": [
     {
       "source": "/api/(.*)",
