--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build --prefix frontend && npm run build --prefix backend",
     "build:frontend": "npm run build --prefix frontend",
     "build:backend": "npm run build --prefix backend",
-    "vercel-build": "npm run build",
+    "vercel-build": "npm run build --prefix frontend",
     "start": "npm run start --prefix backend",
     "test": "npm run test --prefix frontend && npm run test --prefix backend",
     "lint": "npm run lint --prefix frontend && npm run lint --prefix backend",
