--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npm run vercel-build --prefix frontend",
   "outputDirectory": "frontend/dist",
   "installCommand": "npm install",
   "framework": null,
